--- a/package.json
+++ b/package.json
@@ -14,27 +14,32 @@
 		"three": "^0.102.1"
 	},
 	"scripts": {
-		"dev:react": "react-scripts-ts start",
-		"dev:css": "stylus -w src/stylus -o -c src/css",
 		"start": "yarn dev:react",
-		"test": "react-scripts-ts test --env=jsdom",
-		"eject": "react-scripts-ts eject",
-		"build:react": "react-scripts-ts build",
-		"build:css": "stylus src/stylus -o src/css -c",
+
 		"dev": "npm-run-all --parallel dev:*",
 		"build": "npm-run-all --parallel build:*",
-
+		"eject": "react-scripts-ts eject",
+		"test": "react-scripts-ts test --env=jsdom",
+		
 		"predeploy": "yarn build",
-		"deploy": "gh-pages -d build"
+		"deploy": "gh-pages -d build",
+
+		"dev:react": "react-scripts-ts start",
+		"dev:css": "stylus -w src/stylus -o -c src/css",
+		"electron": "electron .",
+
+		"build:react": "react-scripts-ts build",
+		"build:css": "stylus src/stylus -o src/css -c"
 	},
 	"devDependencies": {
-		"typescript": "3.4.5",
-		"react-scripts-ts": "3.1.0",
 		"@types/animejs": "^2.0.2",
 		"@types/jest": "^24.0.11",
 		"@types/node": "^11.11.5",
 		"@types/react": "^16.8.8",
 		"@types/react-dom": "^16.8.3",
-		"stylus": "^0.54.5"
+		"electron": "^5.0.2",
+		"react-scripts-ts": "3.1.0",
+		"stylus": "^0.54.5",
+		"typescript": "3.4.5"
 	}
 }
