--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
 		"@types/react-dom": "^16.8.4",
 		"electron": "^5.0.2",
 		"react-app-rewire-stylus-modules": "^0.0.2",
-		"react-app-rewired": "^2.1.3",
-		"react-scripts-ts": "3.1.0",
-		"typescript": "3.5.1"
+		"react-app-rewired": "1.6.2",
+		"react-scripts-ts": "^3.1.0",
+		"typescript": "^3.5.1"
 	}
 }
