--- a/package.json
+++ b/package.json
@@ -7,19 +7,16 @@
 	"jest": {
 		"collectCoverageFrom": [
 			"src/**/*.test.{js,jsx,ts,tsx}",
-			"!./node_modules/"
+			"!**/node_modules/"
 		],
 		"coverageThreshold": {
 			"global": {
-				"branches": 1,
+				"branches": 90,
 				"functions": 90,
 				"lines": 90,
 				"statements": 90
 			}
-		},
-		"coverageReporters": [
-			"text"
-		]
+		}
 	},
 	"dependencies": {
 		"@material-ui/core": "^4.0.0",
