--- a/package.json
+++ b/package.json
@@ -42,11 +42,12 @@
 		"@types/node": "^12.0.4",
 		"@types/react": "^16.8.19",
 		"@types/react-dom": "^16.8.4",
+		"codecov": "^3.1.0",
+		"cross-env": "^5.2.0",
 		"electron": "^5.0.2",
 		"react-app-rewire-stylus-modules": "^0.0.2",
 		"react-app-rewired": "1.6.2",
 		"react-scripts-ts": "^3.1.0",
-		"typescript": "^3.5.1",
-		"codecov": "^3.1.0"
+		"typescript": "^3.5.1"
 	}
 }
