--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"deploy": "gh-pages -d build",
 		"start": "cross-env NODE_ENV=development react-app-rewired start --scripts-version react-scripts-ts",
 		"electron": "electron .",
-		"build": "cross-env NODE_ENV=production react-app-rewired build --scripts-version react-scripts-ts"
+		"build": "cross-env NODE_ENV=production GENERATE_SOURCEMAP=false react-app-rewired build --scripts-version react-scripts-ts",
+		"analyze": "cross-env ANALYZE=true npm run build"
 	},
 	"devDependencies": {
 		"@types/animejs": "^2.0.2",
@@ -46,6 +47,7 @@
 		"cross-env": "^5.2.0",
 		"electron": "^5.0.2",
 		"react-app-rewire-stylus-modules": "^0.0.2",
+		"react-app-rewire-webpack-bundle-analyzer": "^1.0.1",
 		"react-app-rewired": "1.6.2",
 		"react-scripts-ts": "^3.1.0",
 		"typescript": "^3.5.1"
