--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ script:
 - yarn coverage
 deploy:
   provider: pages
-  skip-cleanup: true
+  skip_cleanup: true
   github_token: $GITHUB_TOKEN
-  keep-history: true
+  keep_history: true
   local_dir: build
   on:
     branch: master
