--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,14 @@ branches:
 install:
 - yarn install
 script:
-# - yarn build
+- yarn build
 - yarn test || echo "Hello World!"
 - yarn coverage
-- yarn deploy
-# deploy:
-#   provider: pages
-#   skip_cleanup: true
-#   github_token: $GITHUB_TOKEN
-#   keep_history: true
-#   local_dir: build
-#   on:
-#     branch: master
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  keep_history: true
+  local_dir: build
+  on:
+    branch: master
