--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ script:
 - yarn coverage
 deploy:
   provider: pages
+  skip_cleanup: true
   github_token: $GITHUB_TOKEN
   local_dir: build
   on:
