--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ deploy:
   provider: pages
   skip_cleanup: true
   github_token: $GITHUB_TOKEN
+  keep_history: true
   local_dir: build
   on:
     branch: master
