--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "electron-app",
-	"version": "0.1.0",
+  "version": "0.1.0",
+  "author": "SupinePandora43",
 	"private": true,
 	"main": "src/main.js",
 	"homepage": "https://supinepandora43.github.io/electron-app",
@@ -18,15 +19,16 @@
 			}
 		}
 	},
-	"dependencies": {
-		"@material-ui/core": "^4.1.3",
-		"@material-ui/icons": "^4.2.1",
-		"animejs": "^3.0.1",
-		"react": "^16.8.6",
-		"react-dom": "^16.8.6",
-		"react-google-charts": "^3.0.13",
-		"three": "^0.105.2"
-	},
+  "dependencies": {
+    "@material-ui/core": "^4.1.3",
+    "@material-ui/icons": "^4.2.1",
+    "animejs": "^3.0.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-google-charts": "^3.0.13",
+    "three": "^0.105.2",
+    "30-seconds-of-code": "^1.2.3"
+  },
 	"scripts": {
 		"test": "cross-env NODE_ENV=development react-app-rewired test --coverage --scripts-version react-scripts-ts --env=jsdom",
 		"coverage": "codecov",
