progress-bar-webpack-plugin

--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,8 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[{package.json,.travis.yml}]
+[.travis.yml]
 indent_style = space
+
+[{package.json,.travis.yml}]
 indent_size = 2
