--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "electron-app",
-  "version": "0.1.0",
-  "author": "SupinePandora43",
+	"version": "0.1.0",
+	"author": "SupinePandora43",
 	"private": true,
 	"main": "src/main.js",
 	"homepage": "https://supinepandora43.github.io/electron-app",
@@ -19,15 +19,15 @@
 			}
 		}
 	},
-  "dependencies": {
-    "@material-ui/core": "^4.1.3",
-    "@material-ui/icons": "^4.2.1",
-    "animejs": "^3.0.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-google-charts": "^3.0.13",
-    "three": "^0.106.2"
-  },
+	"dependencies": {
+		"@material-ui/core": "^4.1.3",
+		"@material-ui/icons": "^4.2.1",
+		"animejs": "^3.0.1",
+		"react": "^16.8.6",
+		"react-dom": "^16.8.6",
+		"react-google-charts": "^3.0.13",
+		"three": "^0.106.2"
+	},
 	"scripts": {
 		"test": "cross-env NODE_ENV=development react-app-rewired test --coverage --scripts-version react-scripts-ts --env=jsdom",
 		"coverage": "codecov",
@@ -44,9 +44,10 @@
 		"@types/node": "^12.0.12",
 		"@types/react": "^16.8.23",
 		"@types/react-dom": "^16.8.4",
+		"chalk": "^2.4.2",
 		"codecov": "^3.1.0",
 		"cross-env": "^5.2.0",
-		"electron": "^5.0.6",
+		"progress-bar-webpack-plugin": "^1.12.1",
 		"react-app-rewire-stylus-modules": "^0.0.2",
 		"react-app-rewire-webpack-bundle-analyzer": "^1.0.1",
 		"react-app-rewired": "1.6.2",
