--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"three": "^0.106.2"
 	},
 	"scripts": {
-		"test": "cross-env NODE_ENV=development react-app-rewired test --coverage --scripts-version react-scripts-ts --env=jsdom",
+		"test": "cross-env NODE_ENV=development react-app-rewired test --coverage --scripts-version react-scripts-ts --env=jsdom & true",
 		"coverage": "codecov",
 		"predeploy": "npm run build",
 		"deploy": "gh-pages -d build",
@@ -40,6 +40,7 @@
 	},
 	"devDependencies": {
 		"@types/animejs": "^2.0.2",
+		"@types/gulp": "^4.0.6",
 		"@types/jest": "^24.0.15",
 		"@types/node": "^12.0.12",
 		"@types/react": "^16.8.23",
@@ -47,11 +48,14 @@
 		"chalk": "^2.4.2",
 		"codecov": "^3.1.0",
 		"cross-env": "^5.2.0",
+		"gulp": "^4.0.2",
+		"gulp-shell": "^0.7.1",
 		"progress-bar-webpack-plugin": "^1.12.1",
 		"react-app-rewire-stylus-modules": "^0.0.2",
 		"react-app-rewire-webpack-bundle-analyzer": "^1.0.1",
 		"react-app-rewired": "1.6.2",
 		"react-scripts-ts": "^3.1.0",
+		"synchronized-promise": "^0.1.0",
 		"typescript": "^3.5.2"
 	}
 }
