--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,6 +18,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: npm
       run: |
-        npm install -g gulp-cli
+        npm install --global gulp-cli
         gulp travis
         npm run coverage
