--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,5 +18,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: npm
       run: |
+        npm install
         npm run ci
         npm run coverage
